# wi24

./: README.md  assignments.md  calendar.md  contact.md  grades.md  index.md  lectures.md  site.hs  stack.yaml
docs/: assignments.html  calendar.html  contact.html  grades.html  index.html  lectures.html  links.html
docs/discussions/: final-review.html
docs/lectures/: 00-hello.html  01-lambda.html  02-haskell-old.html  02-haskell-rec.html  02-haskell.html  03-datatypes.html  04-hof.html  05-closure.html  05-environments.html  06-parsing.html  07-classes.html  07-types.html  08-monads.html  08-prolog.html  09-io.html  info_ocaml.html  info_prolog.html  partial-solutions.html  piazza.html  prolog.html
docs/static/arith/: arith.cabal
docs/static/code/: cse130-code.cabal
lectures/: 00-hello.md  01-lambda.md  04-hof.md  05-environments.md  06-parsing.md
static/arith/src/Language/Arith/: Eval.hs  Types.hs
static/code/: cse130-code.cabal
static/code/src/: Lec_1_25_24.hs  Lec_2_13_24.hs  Lec_2_1_24.hs  Lec_2_20_24.hs  Lec_2_27_24.hs  Lec_2_6_24.hs  Lec_2_8_24.hs  Lec_3_12_24.hs  main.hs
