cabal-version: 2.4

name:           cse230-code
version:        0.1.0.0
homepage:       https://github.com/ucsd-cse230/fa23#readme
bug-reports:    https://github.com/ucsd-cse230/fa23/issues
author:         Ranjit Jhala
maintainer:     jhala@cs.ucsd.edu
copyright:      2023 Ranjit Jhala
license:        MIT
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ucsd-cse230/fa23

library
  other-modules:
      Lec_1_25_24
      Lec_2_1_24
      Lec_2_6_24
      Lec_2_8_24

  hs-source-dirs:
      src
  build-depends:
      HTTP
    , QuickCheck
    , base >=4.9.1.0 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , mtl
    , network-uri
    , process
    , random
    , stm
    , time
    , unordered-containers
    , vector
    , text
  default-language: Haskell2010
  ghc-options:
    -Wall
    -O2
    -Werror
    -Wno-type-defaults
    -fno-warn-missing-signatures
